--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,11 @@
-html, body {
+html, body, .website {
     margin: 0;
     padding: 0;
+    height: 100vh;
+    width: 100vw;
+}
+
+.website {
+    display: grid;
+    grid-template-rows: max-content 1fr max-content ;
 }
