Try to style Gallery

--- a/styles/GalleryPage.module.css
+++ b/styles/GalleryPage.module.css
@@ -1,3 +1,47 @@
 .container {
-    padding: 1rem;
+    /*padding: 1rem;*/
+    /*padding: 10rem;*/
+}
+
+.container ul {
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
+    width: fit-content;
+
+}
+.container li {
+    height: 40vh;
+    flex-grow: 1;
+    /*padding: 0.5rem;*/
+}
+
+.container li:last-child {
+    flex-grow: 10;
+}
+
+@media (max-aspect-ratio: 1/1) {
+    .container li {
+        height: 30vh;
+    }
+}
+
+@media (max-height: 480px) {
+    .container li {
+        height: 80vh;
+    }
+}
+
+
+@media (max-aspect-ratio: 1/1) and (max-width: 480px) {
+    .container ul {
+        flex-direction: row;
+    }
+
+    .container li {
+        height: auto;
+        width: 100%;
+    }
 }
