--- a/styles/GalleryPage.module.css
+++ b/styles/GalleryPage.module.css
@@ -1,5 +1,5 @@
 .container {
-    /*padding: 1rem;*/
+    padding: 1rem;
     /*padding: 10rem;*/
 }
 
@@ -15,7 +15,7 @@
 .container li {
     height: 40vh;
     flex-grow: 1;
-    /*padding: 0.5rem;*/
+    padding: 0.5rem;
 }
 
 .container li:last-child {
