--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,8 @@
 html, body, .website {
     margin: 0;
     padding: 0;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 }
 
 .website {
