--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,8 @@
 html, body, .website {
     margin: 0;
     padding: 0;
-    height: 100%;
+    max-height: 100%;
+    min-height: 100vh;
     width: 100%;
 }
 
