--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,3 +11,15 @@ html, body, .website {
     grid-template-rows: max-content 1fr max-content ;
     background-color: #ceb2ff;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #ceb2ff;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #864efc;
+}
