Add custom Selection

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,3 +23,8 @@ html, body, .website {
 ::-webkit-scrollbar-thumb {
     background: #864efc;
 }
+
+::selection {
+    color: white;
+    background: #864efc;
+}
