--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Waiting+for+the+Sunrise&display=swap');
+
 html, body, .website {
     margin: 0;
     padding: 0;
     max-height: 100%;
     min-height: 100vh;
     width: 100%;
+}
+
+a {
+    font-family: 'Waiting for the Sunrise', cursive;
+    font-weight: 600;
 }
 
 .website {
