--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Waiting+for+the+Sunrise&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pirata+One&family=Waiting+for+the+Sunrise&display=swap');
 
 html, body, .website {
     margin: 0;
@@ -6,6 +6,12 @@ html, body, .website {
     max-height: 100%;
     min-height: 100vh;
     width: 100%;
+}
+
+h1 {
+    letter-spacing: 5px;
+    font-weight: 100;
+    font-family: 'Pirata One', cursive;
 }
 
 a {
