--- a/styles/GalleryImage.module.css
+++ b/styles/GalleryImage.module.css
@@ -2,6 +2,7 @@
     max-height: 100%;
     min-width: 100%;
     object-fit: cover;
+    border: 3px solid #864efc;
     vertical-align: bottom;
 }
 
