--- a/styles/BasicForm.module.css
+++ b/styles/BasicForm.module.css
@@ -2,17 +2,33 @@
     color: red;
 }
 
+.label, .primary_button {
+    font-size: 1.2rem;
+}
+
+
 .form {
 
 }
 
+.primary_button {
+    padding: 8px;
+    border: 2px solid #864efc;
+    margin-top: 0.5rem;
+    float: right;
+}
+
 .field {
     border: none;
+    padding: 0;
+    margin: 0 0 0.5rem;
 }
 
 .field input {
     display: block;
+    font-size: 1rem;
     margin-top: 5px;
     border: 2px solid #864efc;
-    padding: 5px;
+    padding: 8px;
+    width: -webkit-fill-available;
 }
