--- a/styles/Navigation.module.css
+++ b/styles/Navigation.module.css
@@ -35,8 +35,10 @@
     .menu {
         display: block;
     }
+}
 
+@media screen and (min-width: 700px) {
     .container nav {
-        display: none;
+        display: block !important;
     }
 }
