--- a/styles/Navigation.module.css
+++ b/styles/Navigation.module.css
@@ -6,12 +6,6 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: space-between;
-}
-
-.container li {
-    display: inline;
 }
 
 .link {
@@ -29,16 +23,47 @@
     width: auto;
     cursor: pointer;
     display: none;
+    float: right;
 }
 
 @media screen and (max-width: 700px) {
     .menu {
         display: block;
     }
+
+    .container nav {
+        margin-top: 1rem;
+        position: absolute;
+        left: 0;
+        background-color: #ceb2ff;
+        right: 0;
+        bottom: 0;
+        top: 60px;
+        padding-bottom: 1rem;
+        border-bottom: 2px solid black;
+    }
+
+    .container span {
+        margin: auto auto 1.5rem;
+    }
+
 }
 
 @media screen and (min-width: 700px) {
     .container nav {
         display: block !important;
+    }
+
+    .container li {
+        display: inline;
+    }
+
+    .container ul {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .container span {
+        float: left;
     }
 }
