--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@ html, body, .website {
     margin: 0;
     padding: 0;
     max-height: 100%;
-    min-height: 100vh;
+    min-height: calc(var(--vh, 1vh) * 100);
     width: 100%;
 }
 
