--- a/styles/LandingPage.module.css
+++ b/styles/LandingPage.module.css
@@ -22,4 +22,18 @@
 
 .opening h2 {
     font-size: 3rem;
+
+}
+
+
+@media screen and (max-width: 700px) {
+
+    .opening h1 {
+        font-size: 6rem;
+    }
+
+    .opening h2 {
+        font-size: 2.5rem;
+    }
+
 }
