--- a/styles/Navigation.module.css
+++ b/styles/Navigation.module.css
@@ -19,7 +19,8 @@
 }
 
 .menu {
-    height: 50px;
+    height: 30px;
+    padding: 5px;
     width: auto;
     cursor: pointer;
     display: none;
@@ -29,6 +30,10 @@
 @media screen and (max-width: 700px) {
     .menu {
         display: block;
+    }
+
+    .container nav {
+        padding-top: 50px;
     }
 
     .containerOpen {
