--- a/styles/ContactPage.module.css
+++ b/styles/ContactPage.module.css
@@ -1,3 +1,11 @@
 .container {
     padding: 1rem;
 }
+
+.success {
+    color: white;
+    margin-bottom: 1.2rem;
+    margin-top: 0;
+    font-size: 1.5rem;
+    text-align: center;
+}
