--- a/styles/BasicForm.module.css
+++ b/styles/BasicForm.module.css
@@ -33,7 +33,7 @@
     margin-top: 5px;
     border: 2px solid #864efc;
     padding: 8px;
-    width: -webkit-fill-available;
+    width: calc(100% - 1rem);
     resize: vertical;
 }
 
