--- a/styles/Navigation.module.css
+++ b/styles/Navigation.module.css
@@ -42,7 +42,7 @@
         background-color: #ceb2ff;
         right: 0;
         top: 0;
-        height: calc(var(--vh, 1vh) * 100);;
+        height: calc(var(--vh, 1vh) * 100);
     }
 
     .container span {
